--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="flex flex-col md:flex-row items-center md:items-start space-y-8 md:space-y-0 md:space-x-12">
                 <div class="w-full md:w-1/3">
                     <!-- الصورة الشخصية: يمكنك استبدال رابط الصورة المؤقتة هذا برابط صورتك الخاصة. -->
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=صورة+شخصية" alt="Ziad Sultan" class="w-full h-auto rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
+                    <img src="img.jpeg" alt="Ziad Sultan" class="w-full h-auto rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
                 </div>
                 <div class="w-full md:w-2/3">
                     <h2 class="text-4xl font-bold section-header">About Me</h2>
