--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <a href="#about" class="hover:text-indigo-400 transition-colors">About Me</a>
                 <a href="#education" class="hover:text-indigo-400 transition-colors">Education</a>
                 <a href="#experience" class="hover:text-indigo-400 transition-colors">Experience</a>
+                <a href="#certificates" class="hover:text-indigo-400 transition-colors">Certificates</a>
                 <a href="#projects" class="hover:text-indigo-400 transition-colors">Projects</a>
                 <a href="#services" class="hover:text-indigo-400 transition-colors">Services</a>
                 <a href="#contact" class="hover:text-indigo-400 transition-colors">Contact</a>
@@ -120,6 +121,7 @@
                 <a href="#about" class="block px-4 py-2 hover:bg-slate-700 rounded-md transition-colors">About Me</a>
                 <a href="#education" class="block px-4 py-2 hover:bg-slate-700 rounded-md transition-colors">Education</a>
                 <a href="#experience" class="block px-4 py-2 hover:bg-slate-700 rounded-md transition-colors">Experience</a>
+                <a href="#certificates" class="block px-4 py-2 hover:bg-slate-700 rounded-md transition-colors">Certificates</a>
                 <a href="#projects" class="block px-4 py-2 hover:bg-slate-700 rounded-md transition-colors">Projects</a>
                 <a href="#services" class="block px-4 py-2 hover:bg-slate-700 rounded-md transition-colors">Services</a>
                 <a href="#contact" class="block px-4 py-2 hover:bg-slate-700 rounded-md transition-colors">Contact</a>
@@ -252,6 +254,37 @@
             </div>
         </section>
 
+        <!-- Certificates Section -->
+        <section id="certificates" class="py-20">
+            <h2 class="text-4xl font-bold text-center section-header mx-auto">Certificates </h2>
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-12">
+                <!-- Certificate 1 -->
+                <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
+                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Cisco+Networking+Academy" alt="Cisco Networking Academy" class="rounded-lg mb-4 w-full h-auto">
+                    <h3 class="text-xl font-bold text-indigo-400">Cisco Networking Academy</h3>
+                    <p class="text-slate-400 mt-2">Completion of the foundational CCNA course, demonstrating knowledge of networking fundamentals and practical skills.</p>
+                </div>
+                <!-- Certificate 2 -->
+                <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
+                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Red+Hat+System+Administration" alt="Red Hat System Administration" class="rounded-lg mb-4 w-full h-auto">
+                    <h3 class="text-xl font-bold text-indigo-400">Red Hat System Administration</h3>
+                    <p class="text-slate-400 mt-2">Certificate for successful completion of the Red Hat System Administration I course, covering Linux system management.</p>
+                </div>
+                <!-- Certificate 3 -->
+                <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
+                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Cisco+Cybersecurity+Essentials" alt="Cisco Cybersecurity Essentials" class="rounded-lg mb-4 w-full h-auto">
+                    <h3 class="text-xl font-bold text-indigo-400">Cisco Cybersecurity Essentials</h3>
+                    <p class="text-slate-400 mt-2">Awarded for completing the Cybersecurity Essentials course, focusing on security principles and threat protection.</p>
+                </div>
+                <!-- Certificate 4 -->
+                <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
+                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Ethical+Hacking+%26+Linux" alt="Ethical Hacking & Linux" class="rounded-lg mb-4 w-full h-auto">
+                    <h3 class="text-xl font-bold text-indigo-400">Ethical Hacking & Linux</h3>
+                    <p class="text-slate-400 mt-2">Completion of an ethical hacking and Linux training program, covering vulnerability assessment and hands-on Linux skills.</p>
+                </div>
+            </div>
+        </section>
+
         <!-- Projects Section -->
         <section id="projects" class="py-20">
             <h2 class="text-4xl font-bold text-center section-header mx-auto">Selected Projects</h2>
@@ -336,7 +369,7 @@
                     <a href="https://www.instagram.com/ziad.m.sultan/" target="_blank" rel="noopener noreferrer" class="hover:text-indigo-400 transition-colors">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://drive.google.com/file/d/1ctwkJCgiXam_Onpd3VrxsUikHk1tLbUY/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-full shadow-lg transition-transform transform hover:scale-105 text-base">
+                    <a href="CV.pdf" download class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-full shadow-lg transition-transform transform hover:scale-105 text-base">
                         Download My CV
                     </a>
                 </div>
