--- a/index.html
+++ b/index.html
@@ -260,25 +260,25 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-12">
                 <!-- Certificate 1 -->
                 <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Cisco+Networking+Academy" alt="Cisco Networking Academy" class="rounded-lg mb-4 w-full h-auto">
+                    <img src="ccna.png" alt="Cisco Networking Academy" class="rounded-lg mb-4 w-full h-auto">
                     <h3 class="text-xl font-bold text-indigo-400">Cisco Networking Academy</h3>
                     <p class="text-slate-400 mt-2">Completion of the foundational CCNA course, demonstrating knowledge of networking fundamentals and practical skills.</p>
                 </div>
                 <!-- Certificate 2 -->
                 <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Red+Hat+System+Administration" alt="Red Hat System Administration" class="rounded-lg mb-4 w-full h-auto">
+                    <img src="red.png" alt="Red Hat System Administration" class="rounded-lg mb-4 w-full h-auto">
                     <h3 class="text-xl font-bold text-indigo-400">Red Hat System Administration</h3>
                     <p class="text-slate-400 mt-2">Certificate for successful completion of the Red Hat System Administration I course, covering Linux system management.</p>
                 </div>
                 <!-- Certificate 3 -->
                 <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Cisco+Cybersecurity+Essentials" alt="Cisco Cybersecurity Essentials" class="rounded-lg mb-4 w-full h-auto">
+                    <img src="cyber.png" alt="Cisco Cybersecurity Essentials" class="rounded-lg mb-4 w-full h-auto">
                     <h3 class="text-xl font-bold text-indigo-400">Cisco Cybersecurity Essentials</h3>
                     <p class="text-slate-400 mt-2">Awarded for completing the Cybersecurity Essentials course, focusing on security principles and threat protection.</p>
                 </div>
                 <!-- Certificate 4 -->
                 <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=Ethical+Hacking+%26+Linux" alt="Ethical Hacking & Linux" class="rounded-lg mb-4 w-full h-auto">
+                    <img src="ethical.png" alt="Ethical Hacking & Linux" class="rounded-lg mb-4 w-full h-auto">
                     <h3 class="text-xl font-bold text-indigo-400">Ethical Hacking & Linux</h3>
                     <p class="text-slate-400 mt-2">Completion of an ethical hacking and Linux training program, covering vulnerability assessment and hands-on Linux skills.</p>
                 </div>
