--- a/index.html
+++ b/index.html
@@ -291,19 +291,19 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-12">
                 <!-- Project 1 -->
                 <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=NETWORK+DESIGN" alt="Secure Network Design" class="rounded-lg mb-4">
+                    <img src="secnet.png" alt="Secure Network Design" class="rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-400">Secure Network Design for Small Business</h3>
                     <p class="text-slate-400 mt-2">Designed and implemented a secure network infrastructure including VLAN segmentation, firewall configuration, and VPN for remote users.</p>
                 </div>
                 <!-- Project 2 -->
                 <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=PENETRATION+TESTING" alt="Vulnerability Assessment" class="rounded-lg mb-4">
+                    <img src="vulnera.png" alt="Vulnerability Assessment" class="rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-400">Vulnerability Assessment & Pen Testing Lab</h3>
                     <p class="text-slate-400 mt-2">Built a virtual penetration lab using tools like Nmap and Wireshark to test vulnerabilities and simulate attacks.</p>
                 </div>
                 <!-- Project 3 -->
                 <div class="bg-slate-800 p-6 rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
-                    <img src="https://placehold.co/600x400/1e293b/6366f1?text=FIREWALL+CONFIGURATION" alt="Fortinet Configuration" class="rounded-lg mb-4">
+                    <img src="forti.png" alt="Fortinet Configuration" class="rounded-lg mb-4">
                     <h3 class="text-xl font-bold text-indigo-400">Fortinet Firewall & IPS Configuration</h3>
                     <p class="text-slate-400 mt-2">Configured FortiGate firewall with IPS, applied security policies, monitored traffic, and tested defense against common network threats.</p>
                 </div>
