--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                 <!-- Change made here: The image container now has a smaller width on mobile (w-4/5) and is centered. -->
                 <div class="w-4/5 md:w-1/3 mx-auto">
                     <!-- الصورة الشخصية: يمكنك استبدال رابط الصورة المؤقتة هذا برابط صورتك الخاصة. -->
-                    <img src="img.jpeg" alt="Ziad Sultan" class="w-full h-auto rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300">
+                    <img src="img.jpeg"alt="Ziad Sultan"class="max-w-sm mx-auto h-auto rounded-xl shadow-lg transform transition-transform hover:scale-105 duration-300 object-cover">
+
                 </div>
                 <div class="w-full md:w-2/3">
                     <h2 class="text-4xl font-bold section-header">About Me</h2>
