--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                 <!-- Change made here: The image container now has a smaller width on mobile (w-4/5) and is centered. -->
                 <div class="w-4/5 md:w-1/3 mx-auto">
                     <!-- الصورة الشخصية: يمكنك استبدال رابط الصورة المؤقتة هذا برابط صورتك الخاصة. -->
-                    <img src="img.jpeg"alt="Ziad Sultan"class="w-40 h-40 rounded-full border-4 border-white shadow-xl object-cover transform transition-transform hover:scale-105 duration-300">
+                    <img src="img.jpeg"alt="Ziad Sultan"class="w-56 h-56 md:w-64 md:h-64 rounded-2xl border-4 border-cyan-500 shadow-2xl object-cover mx-auto transform transition-transform hover:scale-105 duration-300">
+
                 </div>
                 <div class="w-full md:w-2/3">
                     <h2 class="text-4xl font-bold section-header">About Me</h2>
