--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
                 <!-- Change made here: The image container now has a smaller width on mobile (w-4/5) and is centered. -->
                 <div class="w-4/5 md:w-1/3 mx-auto">
                     <!-- الصورة الشخصية: يمكنك استبدال رابط الصورة المؤقتة هذا برابط صورتك الخاصة. -->
-                   <img src="img.jpeg" 
+    <img src="img.jpeg" 
      alt="Ziad Sultan" 
-     class="w-72 h-72 md:w-80 md:h-80 rounded-2xl shadow-2xl object-cover mx-auto transform transition duration-500 hover:scale-105 hover:shadow-cyan-500/50">
+     class="w-96 h-96 md:w-[28rem] md:h-[28rem] rounded-2xl shadow-2xl object-cover mx-auto transform transition duration-500 hover:scale-105 hover:shadow-cyan-500/50">
+
 
 
                 </div>
