--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                     <!-- الصورة الشخصية: يمكنك استبدال رابط الصورة المؤقتة هذا برابط صورتك الخاصة. -->
 <img src="img.jpeg" 
      alt="Ziad Sultan" 
-     class="w-[28rem] h-[34rem] rounded-2xl shadow-2xl mx-auto transform transition duration-500 hover:scale-105 hover:shadow-cyan-500/50 object-cover object-top">
+     class="w-72 h-96 rounded-2xl shadow-2xl mx-auto transform transition duration-500 hover:scale-105 hover:shadow-cyan-500/50 object-cover object-top">
+
 
 
 
